fixed bar visibility

--- a/styles/site-styles/_modal.card-detail-v2.scss
+++ b/styles/site-styles/_modal.card-detail-v2.scss
@@ -42,8 +42,8 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100%;
+  max-height: 100%;
   overflow: hidden auto;
   padding: 2rem 0 3.5rem;
 
@@ -193,7 +193,7 @@
 }
 
 .card-detail__modal .content__cta {
-  position: fixed;
+  position: absolute;
   top: auto;
   right: 0;
   bottom: 0;
